--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ sudo: false
 # Select operating system(s)
 os:
   - linux
-
+  - osx
 # Select compatible Smalltalk image(s)
 smalltalk:
 
   - Pharo-alpha
-  - Pharo-stable
-  - Pharo-5.0
+  - Pharo-6.1
+  - Pharo-7.0
 
 
