more pharo conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,14 @@ os:
 # Select compatible Smalltalk image(s)
 smalltalk:
 
-  - Pharo-alpha
-  - Pharo-6.1
-  - Pharo-7.0
+
+
+- Pharo32-9.0
+- Pharo64-9.0
+- Pharo32-8.0
+- Pharo64-8.0
+- Pharo32-7.0
+- Pharo64-7.0
+
 
 
